tests/error/linear_errors/unused_field2.err
Error: Drop violation (at $FILE:13:8)
   | 
11 | 
12 | @guppy
13 | def foo(s: MyStruct @owned) -> qubit:
   |         ^^^^^^^^^^^^^^^^^^ Field `s.q2` with non-droppable type `qubit` is leaked

Help: Make sure that `s.q2` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
